--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Link to CSS -->
     <link rel="stylesheet" href="styles.css">
-    <!-- Innohep Brand Colors and Fonts -->
+    <!-- Import Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+    <!-- Innohep Brand Colors -->
     <style>
         :root {
             /* Brand Colors */
@@ -47,7 +49,8 @@
     <!-- Header -->
     <header>
         <div class="logo">
-            <img src="images/innohep-logo.png" alt="Innohep Logo">
+            <!-- Placeholder Image -->
+            <img src="https://via.placeholder.com/150" alt="Innohep Logo">
         </div>
         <nav>
             <ul class="nav-links">
@@ -80,8 +83,6 @@
         </section>
 
         <!-- Content Sections -->
-        <!-- Each section follows the same structure with updated typography -->
-        <!-- Example: Formulations Section -->
         <section id="formulations" class="content-section">
             <h2>Formulations</h2>
             <p><strong>10 Vials of 2 ml:</strong></p>
@@ -89,10 +90,17 @@
                 <li>Tinzaparin sodium 10,000 IU anti-Xa/ml, preserved with benzyl alcohol (10 mg/ml).</li>
                 <li>Tinzaparin sodium 20,000 IU anti-Xa/ml, preserved with benzyl alcohol (10 mg/ml), stabilized with sodium metabisulphite.</li>
             </ul>
-            <!-- ... Remaining content ... -->
+            <p><strong>10 Pre-filled syringes with needle safety device:</strong></p>
+            <ul>
+                <li>Volumes of 0.25ml, 0.35ml, or 0.45ml containing Tinzaparin sodium 10,000 IU anti-Xa/ml.</li>
+            </ul>
+            <p><strong>2 Pre-filled syringes with needle safety device:</strong></p>
+            <ul>
+                <li>Volumes of 0.5ml, 0.7ml, or 0.9ml containing Tinzaparin sodium 20,000 IU anti-Xa/ml, stabilized with sodium metabisulphite.</li>
+            </ul>
         </section>
 
-        <!-- Repeat for other sections (Properties, Indications, etc.) -->
+        <!-- Repeat similar sections for Properties, Indications, etc. -->
 
         <!-- Last Revised Date -->
         <section class="content-section">
